--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <span class="skill">Visual Studio</span>
                     <span class="skill">Android Studio</span>
                     <span class="skill">Ingles B1</span>
-                    <span class="skill">Formateo de sistemas operativos</span>
+                    <span class="skill">Instalación de Sistemas Operativos</span>
                 </div>
             </section>
         </main>
